--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>Hello, Vue :)</h1>
+
+    <div id="app">
+        
+    </div>
     
     <script src="app.js"></script>
 </body>
