--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="<script src="https://unpkg.com/vue@3.0.2"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <title>Document</title>
 </head>
 <body>
     <h1>Hello, Vue :)</h1>
 
     <div id="app">
-        
+
     </div>
     
     <script src="app.js"></script>
