--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello, Vue :)</h1>
 
     <div id="app">
-
+        <p>{{ title }} - {{ author }} - {{ age }}</p>
     </div>
     
     <script src="app.js"></script>
