--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div id="app">
         <p>{{ title }} - {{ author }} - {{ age }}</p>
+        <button v-on:click="age++">Increase age</button>
     </div>
     
     <script src="app.js"></script>
