--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <div id="app">
         <p>{{ title }} - {{ author }} - {{ age }}</p>
         <button v-on:click="age++">Increase age</button>
+        <button v-on:click="age--">Decrease age</button>
+
+        
     </div>
     
     <script src="app.js"></script>
