--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 
     <div id="app">
         <p>{{ title }} - {{ author }} - {{ age }}</p>
-        <button v-on:click="age++">Increase age</button>
-        <button v-on:click="age--">Decrease age</button>
-
-        
+        <button @click="age++">Increase age</button>
+        <button @click="age--">Decrease age</button>
     </div>
     
     <script src="app.js"></script>
