--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div v-if = "showBooks">
                 <p>{{ title }} - {{author}} - {{age}}</p>
             </div>
-            <button>
+            <button @click = "toggleShowBooks">
                 <span>Hide Books</span>
             </button>
         </div>
